PFC/Yocto_Infor/yocto_TXT/output_1664.txt
* using Devtool upgrade with --no-patch subcommand #yocto #devtool
@ 2022-07-06  6:58 ksmanjunath681
  0 siblings, 0 replies; only message in thread
From: ksmanjunath681 @ 2022-07-06  6:58 UTC (permalink / raw)
  To: yocto

[-- Attachment #1: Type: text/plain, Size: 5671 bytes --]

> 
> Hi i am currently understanding devtool work flow with --no-patch command,
> i was able to use with recipes having only src_uri to repo url only, where
> has other recipes with
> SRC_URI appended with patch pointing to local location this is giving me
> error , :
> File
> "/home/manju/Manjunath/AUH/pipeline/iteration_5/AUH_test/update_auh_flow/hgv-oss-yocto-poky/scripts/devtool",
> line 334, in <module>
> ret = main()
> File
> "/home/manju/Manjunath/AUH/pipeline/iteration_5/AUH_test/update_auh_flow/hgv-oss-yocto-poky/scripts/devtool",
> line 321, in main
> ret = args.func(args, config, basepath, workspace)
> File
> "/home/manju/Manjunath/AUH/pipeline/iteration_5/AUH_test/update_auh_flow/hgv-oss-yocto-poky/scripts/lib/devtool/upgrade.py",
> line 552, in upgrade
> tinfoil, rd)
> File
> "/home/manju/Manjunath/AUH/pipeline/iteration_5/AUH_test/update_auh_flow/hgv-oss-yocto-poky/scripts/lib/devtool/upgrade.py",
> line 258, in _extract_new_source
> patches = oe.recipeutils.get_recipe_patches(crd)
> File
> "/home/manju/Manjunath/AUH/pipeline/iteration_5/AUH_test/update_auh_flow/hgv-oss-yocto-poky/meta/lib/oe/recipeutils.py",
> line 501, in get_recipe_patches
> patches = oe.patch.src_patches(d, expand=False)
> File
> "/home/manju/Manjunath/AUH/pipeline/iteration_5/AUH_test/update_auh_flow/hgv-oss-yocto-poky/meta/lib/oe/patch.py",
> line 814, in src_patches
> local = patch_path(url, fetch, workdir, expand)
> File
> "/home/manju/Manjunath/AUH/pipeline/iteration_5/AUH_test/update_auh_flow/hgv-oss-yocto-poky/meta/lib/oe/patch.py",
> line 788, in patch_path
> local = fetch.localpath(url)
> File
> "/home/manju/Manjunath/AUH/pipeline/iteration_5/AUH_test/update_auh_flow/hgv-oss-yocto-poky/bitbake/lib/bb/fetch2/__init__.py",
> line 1615, in localpath
> self.ud[url].setup_localpath(self.d)
> File
> "/home/manju/Manjunath/AUH/pipeline/iteration_5/AUH_test/update_auh_flow/hgv-oss-yocto-poky/bitbake/lib/bb/fetch2/__init__.py",
> line 1311, in setup_localpath
> self.localpath = self.method.localpath(self, d)
> File
> "/home/manju/Manjunath/AUH/pipeline/iteration_5/AUH_test/update_auh_flow/hgv-oss-yocto-poky/bitbake/lib/bb/fetch2/local.py",
> line 44, in localpath
> return self.localpaths(urldata, d)[-1]
> File
> "/home/manju/Manjunath/AUH/pipeline/iteration_5/AUH_test/update_auh_flow/hgv-oss-yocto-poky/bitbake/lib/bb/fetch2/local.py",
> line 55, in localpaths
> filespath = d.getVar('FILESPATH')
> File
> "/home/manju/Manjunath/AUH/pipeline/iteration_5/AUH_test/update_auh_flow/hgv-oss-yocto-poky/bitbake/lib/bb/data_smart.py",
> line 606, in getVar
> return self.getVarFlag(var, "_content", expand, noweakdefault, parsing)
> File
> "/home/manju/Manjunath/AUH/pipeline/iteration_5/AUH_test/update_auh_flow/hgv-oss-yocto-poky/bitbake/lib/bb/data_smart.py",
> line 804, in getVarFlag
> parser = self.expandWithRefs(value, cachename)
> File
> "/home/manju/Manjunath/AUH/pipeline/iteration_5/AUH_test/update_auh_flow/hgv-oss-yocto-poky/bitbake/lib/bb/data_smart.py",
> line 426, in expandWithRefs
> raise ExpansionError(varname, s, exc).with_traceback(tb) from exc
> File
> "/home/manju/Manjunath/AUH/pipeline/iteration_5/AUH_test/update_auh_flow/hgv-oss-yocto-poky/bitbake/lib/bb/data_smart.py",
> line 413, in expandWithRefs
> s = __expand_python_regexp__.sub(varparse.python_sub, s)
> File
> "/home/manju/Manjunath/AUH/pipeline/iteration_5/AUH_test/update_auh_flow/hgv-oss-yocto-poky/bitbake/lib/bb/data_smart.py",
> line 114, in python_sub
> return connector.expandPythonRef(self.varname, code, self.d)
> File
> "/home/manju/Manjunath/AUH/pipeline/iteration_5/AUH_test/update_auh_flow/hgv-oss-yocto-poky/bitbake/lib/bb/tinfoil.py",
> line 70, in expandPythonRef
> ret = self.tinfoil.run_command('dataStoreConnectorExpandPythonRef', ds,
> varname, expr)
> 
> raise TinfoilCommandFailed(result[1])
> bb.data_smart.ExpansionError: Failure expanding variable FILESPATH,
> expression was
> ${@base_set_filespath(["/home/manju/Manjunath/AUH/pipeline/iteration_5/AUH_test/update_auh_flow/hgv-oss-yocto-meta-manju-tools/recipes-core/manju-utility/manju-utility-${PV}",
> "/home/manju/Manjunath/AUH/pipeline/iteration_5/AUH_test/update_auh_flow/hgv-oss-yocto-meta-s-manju-tools/recipes-core/manju-utility/manju-utility",
> "/home/manju/Manjunath/AUH/pipeline/iteration_5/AUH_test/update_auh_flow/hgv-oss-yocto-meta-s-tools/recipes-core/manju-utility/files"],
> d)} which triggered exception TinfoilCommandFailed: Traceback (most recent
> call last):
> File
> "/home/manju/Manjunath/AUH/pipeline/iteration_5/AUH_test/update_auh_flow/hgv-oss-yocto-poky/bitbake/lib/bb/command.py",
> line 74, in runCommand
> result = command_method(self, commandline)
> File
> "/home/manju/Manjunath/AUH/pipeline/iteration_5/AUH_test/update_auh_flow/hgv-oss-yocto-poky/bitbake/lib/bb/command.py",
> line 496, in dataStoreConnectorExpandPythonRef
> return varparse.python_sub(expr)
> File
> "/home/manju/Manjunath/AUH/pipeline/iteration_5/AUH_test/update_auh_flow/hgv-oss-yocto-poky/bitbake/lib/bb/data_smart.py",
> line 120, in python_sub
> codeobj = compile(code.strip(), varname, "eval")
> File "Var <FILESPATH>", line 1
> base_set_filespath(["/home/manju/Manjunath/AUH/pipeline/iteration_5/AUH_test/update_auh_flow/hgv-oss-yocto-meta-manju-tools/recipes-core/manju-utility/manju-utility-${PV
> 
> ^
> SyntaxError: EOL while scanning string literal
> File
> "/home/manju/Manjunath/AUH/pipeline/iteration_5/AUH_test/update_auh_flow/hgv-oss-yocto-poky/bitbake/lib/bb/tinfoil.py",
> line 466, in run_command
> 
> 

is there anything i am missing here .

> 
> 
>

[-- Attachment #2: Type: text/html, Size: 7201 bytes --]

^ permalink raw reply	[flat|nested] only message in thread
only message in thread, other threads:[~2022-07-06  6:58 UTC | newest]

Thread overview: (only message) (download: mbox.gz / follow: Atom feed)
-- links below jump to the message on this page --
2022-07-06  6:58 using Devtool upgrade with --no-patch subcommand #yocto #devtool ksmanjunath681

